--- a/app/app/src/main/res/layout/fragment_invest.xml
+++ b/app/app/src/main/res/layout/fragment_invest.xml
@@ -46,10 +46,10 @@
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/txt_value_money_available"
-                app:layout_constraintHeight_percent="0.06"
+                app:layout_constraintHeight_percent="0.05"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest"
-                app:layout_constraintWidth_percent="0.4" />
+                app:layout_constraintWidth_percent="0.5" />
 
             <TextView
                 android:id="@+id/txt_value_money_available"
@@ -60,11 +60,10 @@
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.06"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHeight_percent="0.05"
                 app:layout_constraintStart_toEndOf="@+id/txt_money_available"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest"
-                app:layout_constraintWidth_percent="0.4" />
+                app:layout_constraintWidth_percent="0.3" />
 
             <EditText
                 android:id="@+id/edit_invest_amount"
@@ -86,7 +85,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
-                android:entries="@array/lend_reason"
+                android:entries="@array/time_to_return"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
