--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
             android:paddingBottom="16dp"
             tools:context=".profile">
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/img_user_photo"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
@@ -29,7 +29,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/user" />-->
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_user_photo"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/user_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txt_profile"
