--- a/app/app/src/main/res/menu/menu_worker.xml
+++ b/app/app/src/main/res/menu/menu_worker.xml
@@ -11,6 +11,6 @@
         android:title="@string/my_loan" />
     <item android:id="@+id/menu_w_history"
         android:title="@string/history" />
-    <item android:id="@+id/menu_w_signout"
+    <item android:id="@+id/menu_signout"
         android:title="@string/signout" />
 </menu>
