--- a/app/app/src/main/res/layout/fragment_main_investor.xml
+++ b/app/app/src/main/res/layout/fragment_main_investor.xml
@@ -35,18 +35,17 @@
                 app:layout_constraintTop_toTopOf="@+id/img_user_photo"
                 app:layout_constraintWidth_percent="0.6" />
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_user_photo"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/user_photo"
                 app:layout_constraintHeight_percent="0.1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.2"
-                app:srcCompat="@drawable/user" />
+                app:layout_constraintWidth_percent="0.2" />
 
             <TextView
                 android:id="@+id/txt_my_invest_balance"
