Add cards of investments

--- a/app/app/src/main/res/drawable/btn_background_white.xml
+++ b/app/app/src/main/res/drawable/btn_background_white.xml
@@ -3,7 +3,6 @@
     <corners android:radius="10dp"/>
     <stroke
         android:width="3dp"
-        android:color="@color/btn_orange"
-        />
+        android:color="@color/btn_orange"/>
     <solid android:color="@color/btn_white"/>
 </shape>
