--- a/app/app/src/main/res/layout/fragment_main_worker.xml
+++ b/app/app/src/main/res/layout/fragment_main_worker.xml
@@ -29,6 +29,7 @@
                 android:textColor="@color/textPrimary"
                 android:textSize="@dimen/subtitle"
                 app:autoSizeTextType="uniform"
+                app:layout_constraintBottom_toBottomOf="@+id/img_user_photo"
                 app:layout_constraintHeight_percent="0.05"
                 app:layout_constraintStart_toEndOf="@+id/img_user_photo"
                 app:layout_constraintTop_toTopOf="@+id/img_user_photo"
@@ -142,6 +143,7 @@
                 android:text="@string/lend"
                 android:onClick="onLend"
                 android:textColor="@color/textPrimary"
+                android:elevation="4dp"
                 app:layout_constraintEnd_toStartOf="@+id/btn_my_loan"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintStart_toStartOf="parent"
