--- a/app/app/src/main/res/layout/fragment_invest_details.xml
+++ b/app/app/src/main/res/layout/fragment_invest_details.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".invest">
+    tools:context=".invest_details">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -36,23 +36,23 @@
                 app:layout_constraintWidth_percent="0.8" />
 
             <TextView
-                android:id="@+id/txt_money_available"
+                android:id="@+id/txt_invest_amount"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
-                android:text="Cantidad disponible:"
+                android:text="Máximo a invertir:"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintEnd_toStartOf="@+id/txt_value_money_available"
+                app:layout_constraintEnd_toStartOf="@+id/txt_value_invest_amount"
                 app:layout_constraintHeight_percent="0.05"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest_f2"
                 app:layout_constraintWidth_percent="0.5" />
 
             <TextView
-                android:id="@+id/txt_value_money_available"
+                android:id="@+id/txt_value_invest_amount"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
@@ -61,7 +61,7 @@
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.05"
-                app:layout_constraintStart_toEndOf="@+id/txt_money_available"
+                app:layout_constraintStart_toEndOf="@+id/txt_invest_amount"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title_invest_f2"
                 app:layout_constraintWidth_percent="0.3" />
 
@@ -77,7 +77,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_money_available"
+                app:layout_constraintTop_toBottomOf="@+id/txt_invest_amount"
                 app:layout_constraintWidth_percent="0.6" />
 
             <Spinner
